<resources>
    <string name="app_name">ESP8266-App</string>
    <string name="title_activity_start">StartActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="examples">Examples</string>
    <string name="photoresistor">Photoresistor</string>
    <string name="rgb_led">RGB LED</string>
    <string name="impressum">Imprint</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="others">Others</string>
    <string name="email">info@draeger-it.blog</string>
    <string name="connection">Connection</string>
    <string name="connect">Connect</string>
    <string name="disconnect">Disconnect</string>
    <string name="settings">Settings</string>
    <string name="temperature_sensor">Temperature Sensor</string>
    <string name="buzzer">Buzzer</string>
    <string name="home">Home</string>
    <string name="version_text" formatted="false">Version %1s (Build %2d)</string>
    <string name="seriesTxt">Series</string>
    <string name="clear">Clear</string>
    <string name="download">Download</string>
    <string name="console">Console</string>
    <string name="timer">Timer</string>
    <string name="photoresistorchart_desc">Desc</string>
    <string name="max_value">max. Value</string>
    <string name="min_value">min. Value</string>
    <string name="average_value">average Value</string>
    <string name="set_updateInterval">Set update interval</string>
    <string name="ok">OK</string>
    <string name="abort">Cancel</string>
    <string name="_5sec">5 sec.</string>
    <string name="_10sec">10 sec.</string>
    <string name="_1sec">1 sec.</string>
    <string name="_15sec">15 sec.</string>
    <string name="photoresistor_title">Photoresistor</string>
    <string name="ipaddress">IP Address</string>
    <string name="ipaddress_match_fail">IP Address incorrect (IPv4)</string>
    <string name="connectToDevice">Connect to device</string>
    <string name="msg_loaddialog_titel">Please wait....</string>
    <string name="msg_loaddialog_message">Data is loading...</string>
    <string name="connectionRefused">Connection refused</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="datenschutztext">The use of App "ESP8266-App" by Stefan Draeger Software is possible without declaration of personal
        Related data. We emphasize that data transfer on Internet  (e.g. through e-mail communication) can have security loopholes.
        A watertight safeguard to data access through a third party is not guaranteed.
        Commercials and information material, which are not called up, are herewith prohibited.</string>
    <string name="pref_title_vibrate">Vibrate</string>
    <string name="home_title">WittyApp</string>
    <string name="rgbled_title">RGB LED</string>
    <string name="settings_title">Settings</string>
    <string name="imprint_title">Imprint</string>
    <string name="privacy_policy_title">Privacy Policy</string>
    <string name="temperature_sensor_title">Temperature Sensor</string>
    <string name="buzzer_title">Buzzer</string>
    <string name="console_title">Console</string>
    <string name="no_items_found">No Items found!</string>
    <string name="refresh">Refresh</string>
    <string name="timer_off">Timer off</string>
    <string name="WittyCloud">WittyCloud</string>
    <string name="WemosD1mini">Wemos D1 mini</string>
    <string name="frequenz_text">Frequenz</string>
    <string name="duration_text">Duration</string>
    <string name="sht30">SHT30</string>
    <string name="ds18b20">DS18B20</string>
    <string name="dht11">DHT11</string>
    <string name="dht22">DHT22</string>
    <string name="sensorType">Sensortype</string>
    <string name="set_device_address">Set device IP-Address</string>
    <string name="esp01s">ESP-01S</string>
    <string name="dht11sensor">DHT11 Sensor</string>
    <string name="relaisshield">Relay Shield</string>
    <string name="relay">Relay</string>
    <string name="relay_title">Relay Shield</string>
    <string name="minValue">min. Value</string>
    <string name="einheit">Unity</string>
    <string name="tempC">Temp. C</string>
    <string name="tempF">Temp. F</string>
    <string name="humidity">Humidity</string>
    <string name="errorMsg">Error...</string>
    <string name="desc_lastupdate">Last update %1s</string>
    <string name="tempC_val">%1$.2f °C</string>
    <string name="average_val">%1$.2f %%</string>
    <string name="tempF_val">%1$.2f °F</string>
    <string name="humi_val">%1$.2f %%</string>
    <string name="matrix">8×8 LED Matrix Shield</string>
    <string name="matrix_title">8×8 LED Matrix Shield</string>
    <string name="brightness_text">Brightness</string>
    <string name="imageResId">imageResId</string>
    <string name="currentRowId">currentRowId</string>
    <string name="currentColId">currentColId</string>
    <string name="help">Help</string>
    <string name="help_title">Help</string>
    <string name="infoMsg">Info...#</string>
    <string name="txt_autoconnect">auto connect to last device</string>
    <string name="save">save</string>
    <string name="txt_greeting">Greeting</string>

    <array name="tempsensors">
        <item>SHT30</item>
        <item>DS18B20</item>
        <item>BMP180</item>
        <item>DHT11</item>
        <item>DHT22</item>
    </array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
