<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_clear"
        android:icon="@drawable/ic_clear_white_24dp"
        android:title="@string/clear"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_download"
        android:icon="@drawable/ic_file_download_white_24dp"
        android:title="@string/download"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_timer"
        android:icon="@drawable/ic_timer_white_24dp"
        android:title="@string/timer"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_timeroff"
        android:icon="@drawable/ic_timer_off_white_24dp"
        android:title="@string/timer_off"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_refresh"
        android:icon="@drawable/ic_refresh_white_24dp"
        android:title="@string/refresh"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_check"
        android:icon="@drawable/ic_check_white_24dp"
        android:title="@string/ok"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_save"
        android:icon="@drawable/ic_save_white_24dp"
        android:title="@string/save"
        app:showAsAction="always" />

</menu>